// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelsList List should match snapshot 1`] = `
<View
  onLayout={[Function]}
>
  <SectionList
    contentContainerStyle={
      Object {
        "paddingBottom": 44,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="always"
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={Array []}
    stickySectionHeadersEnabled={true}
    testID="main.sidebar.channels_list.list"
    updateCellsBatchingPeriod={50}
    viewabilityConfig={
      Object {
        "itemVisiblePercentThreshold": 100,
        "waitForInteraction": true,
      }
    }
    windowSize={21}
  />
</View>
`;

exports[`ChannelsList List should match snapshot with collapsed threads enabled 1`] = `
<View
  onLayout={[Function]}
>
  <Connect(ThreadsEntry) />
  <SectionList
    contentContainerStyle={
      Object {
        "paddingBottom": 44,
      }
    }
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="always"
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    onScrollBeginDrag={[Function]}
    onViewableItemsChanged={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={Array []}
    stickySectionHeadersEnabled={true}
    testID="main.sidebar.channels_list.list"
    updateCellsBatchingPeriod={50}
    viewabilityConfig={
      Object {
        "itemVisiblePercentThreshold": 100,
        "waitForInteraction": true,
      }
    }
    windowSize={21}
  />
  <UnreadIndicatorIOS
    onPress={[Function]}
    style={
      Array [
        undefined,
        Object {
          "marginTop": 64,
        },
      ]
    }
    theme={
      Object {
        "awayIndicator": "#ffbc1f",
        "buttonBg": "#1c58d9",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3f4350",
        "codeTheme": "github",
        "dndIndicator": "#d24b4e",
        "errorTextColor": "#d24b4e",
        "linkColor": "#386fe5",
        "mentionBg": "#ffffff",
        "mentionColor": "#1e325c",
        "mentionHighlightBg": "#ffd470",
        "mentionHighlightLink": "#1b1d22",
        "newMessageSeparator": "#cc8f00",
        "onlineIndicator": "#3db887",
        "sidebarBg": "#1e325c",
        "sidebarHeaderBg": "#192a4d",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarTeamBarBg": "#14213e",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#5d89ea",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#28427b",
        "sidebarUnreadText": "#ffffff",
        "type": "Denim",
      }
    }
    visible={false}
  />
</View>
`;
